# ToyRnn

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  requirements.txt
conan/: conanfile.txt
src/: CMakeLists.txt  simple_example.cpp
src/model/: CMakeLists.txt  InputLayer.cxx  InputLayer.h
src/model/test/: CMakeLists.txt  TestInputLayer.cxx
